prd/pickpro-dev/pickpro-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pickpro-api
  namespace: pickpro-dev
  labels:
    app: pickpro-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pickpro-api
  template:
    metadata:
      labels:
        app: pickpro-api
        app.kubernetes.io/part-of: soludev-workload
    spec:
      containers:
        - name: pickpro-api
          image: kaiohz/pickpro:pickpro-back-6e1f428c5d433c9614502de6a5403ca2ecf1dad1
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /pickpro/rest/v1/health
              port: 8000
            initialDelaySeconds: 90
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /pickpro/rest/v1/health
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 5
          resources:
            requests:
              memory: "1Gi"
              cpu: "1000m"
            limits:
              memory: "3Gi"
              cpu: "2000m"
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      imagePullSecrets:
        - name: pickpro-docker-secret
